--- a/erreur.html
+++ b/erreur.html
@@ -13,7 +13,7 @@
 
 <body>
         <header id="navbar" class="nav">
-            <div id="logo"><a href="accueil.html">BakAnime</a></div>
+            <div id="logo"><a href="index.html">BakAnime</a></div>
             <div class="dropdown">
                 <button class="bouton">Anime genre </button>
                 
