--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                            <i class="arrow-icon fas fa-arrow-right"></i>
                        </div>
                        <div class="card-back">
-                           <a href="anime./One piece.html" class="btn">Fiche critique One Piece</a>
+                           <a href="One piece.html" class="btn">Fiche critique One Piece</a>
                        </div>
                    </div>
 
